--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 		<p>Possuo um bom conhecimento em áreas distintas como desenvolvimento de sistemas web, redes, banco de dados e gestão de projetos. </p>
 		<p>Fácil adaptação à mudanças e trabalhos em grupo, estou aberto a necessidade de viagens pela empresa.</p>
 		<h2>Objetivo Profissional</h2>
-		<p>Trabalhar em uma empresa onde eu tenha possibilidade de crescimento e possa colocar em prática meus conhecimentos melhor ainda se houver a possibilidade de experiência internacional</p>
+		<p>Trabalhar em uma empresa onde eu tenha a possibilidade de crescimento e possa colocar em prática meus conhecimentos, melhor ainda se houver a possibilidade de experiência internacional</p>
 	</section>
 	<section id="formacao" class="secao-corpo col-md-8 col-lg-8">
 
